<resources>
    <string name="app_name">Beacon Automation</string>
    <string name="main_menu_action_settings">Settings</string>
    <string name="main_menu_action_log">Log</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Main Activity And BeaconOverviewAdapter -->
    <string name="dialog_delete_beacon">Delete Beacon</string>
    <string name="saved_beacons_header">Saved Beacons</string>
    <string name="saved_beacons_in_range_header">Saved Beacons in Range</string>
    <string name="beacon_delete_title">Delete Confirmation</string>
    <string name="beacon_delete_message">Are you sure you want to delete this beacon?</string>
    <string name="beacon_delete_not_able_to_delete">Not able to delete beacon</string>
    <string name="location_access_title">This app needs location access</string>
    <string name="location_access_message">Please grant location access so this app can detect beacons.</string>
    <string name="location_permission_limited_func_title">Functionality limited</string>
    <string name="location_permission_limited_func_message">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>

    <!-- Strings related to general beacon search -->
    <string name="beacon_enter_distance_notification_title">Beacon enter distance!</string>
    <string name="beacon_exit_distance_notification_title">Beacon exit distance!</string>
    <string name="beacon_spotted_notification_title">Beacon spotted!</string>
    <string name="beacon_exit_notification_title">Beacon lost!</string>
    <string name="beacon_spotted_notification_message">Entered region uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s</string>
    <string name="beacon_exit_notification_message">Exited region uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s</string>
    <string name="not_able_to_start_monitoring_for_beacon_error_1">Not able to start monitoring for beacon with</string>

    <!-- String related to MqttBroadcaster -->
    <string name="failed_to_connect_mqtt_server">Failed to connect to: %1$s</string>
    <string name="mqtt_missing_server_or_port">MQTT Server or Port not set, not connected to any MQTT server</string>
    <string name="published_mqtt_message_to_topic">Published MQTT message: %1$s to topic: %2$s</string>
    <string name="error_creating_payload">Error Creating payload for uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s</string>
    <string name="error_creating_distance_payload">Error Creating payload for uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s, distance: %5$f</string>
    <string name="connecting_to_mqtt_server">Connecting to MQTT server...</string>
    <string name="connection_successful">Connection successful!</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_mqtt">MQTT</string>
    <string name="pref_header_notifications">Beacon Settings</string>
    <string name="pref_title_general_create_log">Create Log</string>
    <string name="pref_title_server_url">Server</string>
    <string name="pref_title_server_port">Port</string>
    <string name="pref_title_server_user">Username</string>
    <string name="pref_title_server_pass">Password</string>
    <string name="pref_title_mqtt_enter_topic">Beacon Enter Topic</string>
    <string name="pref_title_mqtt_exit_topic">Beacon Exit Topic</string>
    <string name="pref_title_beacon_notifications_enter">Show Notifications on Beacon Enter</string>
    <string name="pref_title_beacon_notifications_exit">Show Notifications on Beacon Exit</string>
    <string name="pref_title_beacon_period_between_scans">Miliseconds Between Scans</string>
    <string name="pref_title_beacon_scan_period">Miliseconds Spent On Scan</string>

    <!-- String related to new beacon -->
    <string name="new_beacon_add_manually_menu">Add Beacon Manually</string>
    <string name="title_activity_new_beacon">Add Beacon</string>
    <string name="dialog_new_beacon_name">Beacon Name (Informal)</string>
    <string name="dialog_save_beacon">Save Beacon</string>
    <string name="dialog_cancel_beacon">Cancel</string>
    <string name="dialog_new_beacon_uuid">Beacon UUID</string>
    <string name="dialog_new_beacon_mac">Beacon Mac</string>
    <string name="dialog_new_beacon_major">Beacon Major</string>
    <string name="dialog_new_beacon_minor">Beacon Minor</string>
    <string name="new_beacon_details_already_saved">Already saved…</string>
    <string name="beacon_details">Major: %1$s Minor: %2$s</string>
    <string name="not_able_to_start_ranging_beacons">Not able to start ranging beacons</string>

    <!-- String related to log viewing -->
    <string name="title_activity_log">Log</string>
    <string name="delete_all_logs_menu">Delete All Logs</string>
    <string name="delete_logs_title">Confirm deletion of all log entries</string>
    <string name="delete_logs_message">Are you sure you want to delete all log entries?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logging_turned_off_message">Logging is turned off, go to settings to turn it on.</string>
    <string name="notification_channel_name">Beacon Automation Notifications</string>
    <string name="notification_channel_description">Notifications raised when entering/leaving a beacon</string>
    <string name="auto_launching">Auto launching Activity</string>

    <string name="accessibility_service_description">accessibility service to maintain app alive</string>
    <string name="beacon_spotted_and_ignored_notification_message">but is was ignored because marked as already in range</string>
    <string name="beacon_exit_and_ignored_notification_message">but was ignored because already marked as out of range</string>
    <string name="pref_title_mqtt_enter_distance_topic">Beacon Enter Distance Topic</string>
    <string name="pref_title_mqtt_exit_distance_topic">Beacon Exit Distance Topic</string>
    <string name="beacon_enter_distance_notification_message">Beacon enter distance uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s, distance: %5$f</string>
    <string name="beacon_exit_distance_notification_message">Beacon exit distance uuid: %1$s, mac %2$s, major: %3$s, minor: %4$s, distance: %5$f</string>
    <string name="pref_title_beacon_notifications_enter_distance">Show Notifications on Beacon Enter Distance</string>
    <string name="pref_title_beacon_notifications_exit_distance">Show Notifications on Beacon Exit Distance</string>
    <string name="pref_title_beacon_minimum_distance">Distance minimum to trigger an event (in meter)</string>
    <string name="pref_title_beacon_monitor_distance">Monitor beacon distance</string>
    <string name="pref_title_general_general_enable_monitoring">Enable monitoring</string>
    <string name="pref_title_webhook_url">Webhook url</string>
    <string name="pref_title_webhook_method">Method</string>
    <string name="pref_title_webhook_enter_payload">Payload for enter event</string>
    <string name="pref_title_webhook_exit_payload">Payload for exit event</string>
    <string name="pref_title_webhook_enter_distance_payload">Payload for enter distance event</string>
    <string name="pref_title_webhook_exit_distance_payload">Payload for exit distance event</string>
    <string name="pref_title_mqtt_payload">Default MQTT payload</string>
    <string name="pref_summary_mqtt_payload">{uuid: \"String - Beacon UUID\", mac: \"String - Beacon Bluetooth address, major: \"String - Beacon Major\", minor: \"String - Beacon Minor\", androidId: \"String - Unique Android identification\" }</string>
    <string name="pref_title_webhook_extra_payload">Configurable Payload must...</string>
    <string name="pref_summary_webhook_extra_payload">...be a valid JSON. The content will be merged with the default payload</string>
    <string name="pref_title_webhook_payload">Default Webhook payload</string>
    <string name="pref_summary_webhook_payload">{uuid: \"String - Beacon UUID\", mac: \"String - Beacon Bluetooth address, major: \"String - Beacon Major\", minor: \"String - Beacon Minor\", androidId: \"String - Unique Android identification\" }</string>
    <string name="pref_header_webhook">Webhook</string>
    <string name="pref_title_mqtt_enable">Enable MQTT</string>
    <string name="pref_title_webhook_enable">Enable webhook</string>
    <string name="webhook_invalid_payload">Configured webhook payload is not a valid JSON</string>
    <string name="pref_title_webhook_content_type">Content type</string>
    <string name="webhook_invalid_url">Webhook url is invalid</string>
    <string name="webhook_done">Webhook executed</string>
</resources>
