<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="mqtt_enable"
        android:title="@string/pref_title_mqtt_enable" />

    <EditTextPreference
        android:inputType="textUri"
        android:key="mqtt_server"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_url" />

    <EditTextPreference
        android:inputType="number"
        android:key="mqtt_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_port" />
    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_user"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_user" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="mqtt_pass"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_pass" />
    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_enter_topic"
        android:defaultValue="@string/default_mqtt_enter_topic"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_enter_topic" />

    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_exit_topic"
        android:defaultValue="@string/default_mqtt_exit_topic"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_exit_topic" />

    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_enter_distance_topic"
        android:defaultValue="@string/default_mqtt_enter_distance_topic"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_enter_distance_topic" />

    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_exit_distance_topic"
        android:defaultValue="@string/default_mqtt_exit_distance_topic"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_exit_distance_topic" />

    <Preference
        android:selectable="false"
        android:enabled="true"
        android:key="mqtt_payload"
        android:title="@string/pref_title_mqtt_payload"
        android:summary="@string/pref_summary_mqtt_payload" />

</PreferenceScreen>
