<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="beacon_notifications_enter"
        android:title="@string/pref_title_beacon_notifications_enter" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="beacon_notifications_exit"
        android:title="@string/pref_title_beacon_notifications_exit" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="beacon_notifications_enter_distance"
        android:title="@string/pref_title_beacon_notifications_enter_distance" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="beacon_notifications_exit_distance"
        android:title="@string/pref_title_beacon_notifications_exit_distance" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="beacon_monitor_distance"
        android:title="@string/pref_title_beacon_monitor_distance" />

    <EditTextPreference
        android:inputType="number"
        android:key="beacon_minimum_distance"
        android:defaultValue="5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_beacon_minimum_distance" />

    <EditTextPreference
        android:inputType="number"
        android:key="beacon_period_between_scans"
        android:defaultValue="300000"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_beacon_period_between_scans" />

    <EditTextPreference
        android:inputType="number"
        android:defaultValue="10000"
        android:key="beacon_scan_period"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_beacon_scan_period" />


</PreferenceScreen>
